frontend-app-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app-deployment-2
  labels:
    app: frontend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
        - name: frontend-app
          image: jswolf059/developer-utilities-frontend
          ports:
            - containerPort: 5000
      imagePullSecrets:
      - name: docker-hub-creds
---

apiVersion: v1
kind: Service
metadata:
  name: frontend-app-service-2
spec:
  selector:
    app: frontend-app
  ports:
    - name: web-app-port
      protocol: TCP
      port: 5000
      targetPort: 5000
  type: LoadBalancer
